compiler/tests/fail/arm-m4/mvn_imm_shifted.jazz
export
fn main(reg u32 x) {
    x = #MVN(0x000cb000);
    [x] = x;
}
